fixup card flicker

--- a/src/css/component/decktracker/overlay/deck-card.component.scss
+++ b/src/css/component/decktracker/overlay/deck-card.component.scss
@@ -16,7 +16,7 @@
 
 	&:hover {
 		transform: scale(1.1);
-		animation: card-zoom 0.2s ease-in-out;
+		// animation: card-zoom 0.2s ease-in-out;
 	}
 
 	.background-image {
